test/bad/basic/cmp1.px

if 3 == true do
    skip
